<resources>
    <string name="app_name">MVP</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="contra">contra</string>
    <string name="login">Login</string>
    <string name="error_empty_email">El email no puede estar vacío</string>
    <string name="email_invalido">El email es invaldo</string>
    <string name="error_password_empty">La contraseña es requerida</string>
    <string name="internal_error">Lo sentimos se produjo un error</string>
</resources>
